# codegraph

./: Cargo.toml  build.rs  database.py  parser.py  server.py
codegraph-nodejs/: Cargo.toml  README.md  index.d.ts  index.js  package.json
codegraph-nodejs/.cargo/: config.toml
codegraph-nodejs/.github/workflows/: CI.yml
codegraph-nodejs/__test__/: index.spec.ts
codegraph-nodejs/examples/: parse_csghub_code.js  parse_go_code.js  parse_python_code.js  parse_typescript_code.js
codegraph-nodejs/npm/android-arm-eabi/: README.md  package.json
codegraph-nodejs/npm/android-arm64/: README.md  package.json
codegraph-nodejs/npm/darwin-arm64/: README.md  package.json
codegraph-nodejs/npm/darwin-universal/: README.md  package.json
codegraph-nodejs/npm/darwin-x64/: README.md  package.json
codegraph-nodejs/npm/freebsd-x64/: README.md  package.json
codegraph-nodejs/npm/linux-arm-gnueabihf/: README.md  package.json
codegraph-nodejs/npm/linux-arm-musleabihf/: README.md  package.json
codegraph-nodejs/npm/linux-arm64-gnu/: README.md  package.json
codegraph-nodejs/npm/linux-arm64-musl/: README.md  package.json
codegraph-nodejs/npm/linux-riscv64-gnu/: README.md  package.json
codegraph-nodejs/npm/linux-x64-gnu/: README.md  package.json
codegraph-nodejs/npm/linux-x64-musl/: README.md  package.json
codegraph-nodejs/npm/win32-arm64-msvc/: README.md  package.json
codegraph-nodejs/npm/win32-ia32-msvc/: README.md  package.json
codegraph-nodejs/npm/win32-x64-msvc/: README.md  package.json
codegraph-nodejs/src/: lib.rs
examples/: a.py  b.py  d.py
src/: db.rs  (+5 more)
(+26 files in other folders)
