[package]
name = "codegraph"
version = "0.0.1-beta.0"
edition = "2021"

[dependencies]
walkdir = "2.4"
gitignore = "1.0"
glob = "0.3"
tree-sitter = "0.25.4"
tree-sitter-python = "0.23.6"
tree-sitter-go = "0.23.4"
strum = "0.27"
strum_macros = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"