[package]
name = "codegraph"
version = "0.0.1-beta.0"
edition = "2021"

[dependencies]
walkdir = "2.4"
gitignore = "1.0"
log = "0.4"
glob = "0.3"
kuzu = "0.10.0"
tree-sitter = "0.25.4"
tree-sitter-python = "0.23.6"
tree-sitter-go = "0.23.4"
strum = "0.27"
strum_macros = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20.0"
duct = "1.0.0"
regex = "1.11.1"
pathdiff = "0.2.3"
csv = "1.3"
indexmap = { version = "2.9.0", features = ["serde"] }
