[package]
name = "codegraph_codegraph"
version = "0.0.1-beta.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
codegraph = { version = "0.0.1-beta.0", path = "../" }
log = "0.4"
env_logger = "0.11.8"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
